# asteroids-genetic

./: Cargo.toml  README.md  genetic.wasm  index.html
.github/workflows/: deploy.yml
models/: brain.json  model.json
src/: asteroids.rs  main.rs  nn.rs  player.rs  population.rs  skins.rs  utils.rs  world.rs
