[package]
name = "genetic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.26"
nalgebra = { version = "0.32.3", features = ["rand", "serde-serialize"] }
rand = "0.8.5"
rand_distr = "0.4.3"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
getrandom = { version = "0.2.1", features = ["js"] }

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
