[package]
name = "genetic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.26"
nalgebra = { version = "0.32.3", features = ["serde-serialize"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
tinyfiledialogs = "3.9.1"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
