[package]
name = "genetic"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.4.13"
nalgebra = { version = "0.33.0", features = ["serde-serialize"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tinyfiledialogs = "3.9.1"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
